--- a/hello.html
+++ b/hello.html
@@ -1,10 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
-	<title>latihan 1</title>
-</head>
-	<p>Nama			: <b>Vicky Aditya Pratama</b></p>
-	<p>Tanggal lahir: <b>Situbondo, 10 Mei 2001</b></p>
+	<p> hello world</p>
 </body>
 </html>
